fix overflow

--- a/less/main.less
+++ b/less/main.less
@@ -52,7 +52,7 @@
 
 html {
   overflow-x: hidden !important;
-  width: 100vw !important;
+  max-width: 100vw !important;
 }
 
 body {
@@ -60,8 +60,7 @@ body {
   height: 100%;
   overflow-x: hidden !important;
   float: none;
-    width: 100vw !important;
-
+  max-width: 100vw !important;
 }
 
 hr {
